--- a/app/views/users/edit.rhtml
+++ b/app/views/users/edit.rhtml
@@ -1,6 +1,7 @@
 <div class="contextual">
 <%= link_to l(:label_profile), user_path(@user), :class => 'icon icon-user' %>
 <%= change_status_link(@user) %>
+<%= link_to l(:button_delete), { :controller => 'users', :action => 'deletion_info', :id => @user.id }, :class => 'icon icon-del' %>
 </div>
 
 <h2><%= link_to l(:label_user_plural), :controller => 'users', :action => 'index' %> &#187; <%=h @user.login %></h2>
