--- a/app/views/users/deletion_info.html.erb
+++ b/app/views/users/deletion_info.html.erb
@@ -2,15 +2,15 @@
 <% form_for :user, :url => user_path(@user), :html => { :method => :delete, :class => 'confirm_required' } do |form| %>
 
   <p>
-    <%= l('account.deletion_info.login_consequences') %>
+    <%= l("account.deletion_info.login_consequences.#{User.current == @user ? 'self' : 'other'}") %>
   </p>
 
   <p>
-    <%= l('account.deletion_info.data_consequences') %>
+    <%= l("account.deletion_info.data_consequences.#{User.current == @user ? 'self' : 'other'}") %>
   </p>
 
   <p>
-    <%= l('account.deletion_info.info') %>
+    <%= l("account.deletion_info.info.#{User.current == @user ? 'self' : 'other'}") %>
   </p>
 
   <p>
