--- a/app/views/users/deletion_info.html.erb
+++ b/app/views/users/deletion_info.html.erb
@@ -1,17 +1,19 @@
 <h2><%=l('account.deletion_info.heading', :name => @user.name) %></h2>
 <% form_for :user, :url => user_path(@user), :html => { :method => :delete, :class => 'confirm_required' } do |form| %>
 
-  <p>
-    <%= l("account.deletion_info.login_consequences.#{User.current == @user ? 'self' : 'other'}") %>
-  </p>
+  <div class='wiki'>
+    <p>
+      <%= l("account.deletion_info.login_consequences.#{User.current == @user ? 'self' : 'other'}") %>
+    </p>
 
-  <p>
-    <%= l("account.deletion_info.data_consequences.#{User.current == @user ? 'self' : 'other'}") %>
-  </p>
+    <p>
+      <%= l("account.deletion_info.data_consequences.#{User.current == @user ? 'self' : 'other'}") %>
+    </p>
 
-  <p>
-    <%= l("account.deletion_info.info.#{User.current == @user ? 'self' : 'other'}") %>
-  </p>
+    <p>
+      <%= l("account.deletion_info.info.#{User.current == @user ? 'self' : 'other'}") %>
+    </p>
+  </div>
 
   <p>
     <%= form.submit l(:button_delete) %>
