--- a/app/views/layouts/base.rhtml
+++ b/app/views/layouts/base.rhtml
@@ -22,6 +22,7 @@
 <%= javascript_include_tag 'breadcrumb.js' %>
 <%= javascript_include_tag 'chosen.js'%>
 <%= stylesheet_link_tag 'chosen'%>
+<%= stylesheet_link_tag 'project_select'%>
 <% if User.current.impaired? && accessibility_css_enabled? %>
   <%= stylesheet_link_tag 'accessibility' %>
 <% end %>
