--- a/app/views/members/autocomplete_for_member.rhtml
+++ b/app/views/members/autocomplete_for_member.rhtml
@@ -1,1 +1,1 @@
-<%= principals_check_box_tags 'member[user_ids][]', @principals %>
+<%= render :partial => 'autocomplete_for_member', :locals => {:principals => @principals} %>
